--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Log-In</title>
 
     <!-- Custom styles for this template -->
-    <link href="css/signin.css" rel="stylesheet">
+    <link href="lib/bootstrap/css/signin.css" rel="stylesheet">
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -41,13 +41,18 @@
         <!-- Contextual button for informational alert messages -->
         <button type="button" class="btn btn-info btn-block"><span class="glyphicon glyphicon glyphicon-arrow-right" aria-hidden="true"></span> Log Out</button>
     </form>
+    <br>
+    <a class="btn btn-block btn-primary" href="www/template/personal.html">Tabelle</a>
 </div>
+
+
+
 </div>
 <!-- /container -->
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="js/bootstrap.min.js"></script>
+<script src="lib/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
